--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,185 @@
+*,
+::after,
+::before {
+  box-sizing: border-box;
+  font-family: "Courier New";
+}
 
+body {
+  padding: 0;
+  margin: 0;
+  background-color: #212177;
+}
+
+.logo {
+  margin-block: 2rem;
+  height: 25vh;
+  background-image: url("/img/logo.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+}
+
+header {
+  position: fixed;
+  top: 0;
+  background-color: #212177;
+}
+header h2 {
+  margin-block: initial !important;
+}
+header nav {
+  position: absolute;
+  transform: translateX(-100%);
+  transition: transform 500ms ease;
+}
+header:hover {
+  padding-right: 1rem;
+}
+header:hover h2 {
+  margin-block: 1rem !important;
+}
+header:hover nav {
+  position: relative;
+  transform: translateX(0%);
+}
+
+@media (min-width: 60em) {
+  header {
+    padding-right: 1rem;
+  }
+  header h2 {
+    margin-block: 1rem !important;
+  }
+  header nav {
+    position: relative;
+    transform: translateX(0%);
+  }
+}
+.flash {
+  padding: 2rem;
+  margin-block: 1rem;
+  background: red;
+}
+
+main {
+  max-width: 60ch;
+  margin-inline: auto;
+  padding: 1rem;
+}
+
+h1,
+h2,
+h3,
+p,
+li,
+label,
+a {
+  color: white;
+  font-weight: initial;
+}
+
+h1,
+h2,
+h3 {
+  text-transform: uppercase;
+  background-color: black;
+  width: fit-content;
+  padding-inline: 0.5rem;
+  margin-block: 2rem;
+}
+h1:not(h2, h3),
+h2:not(h2, h3),
+h3:not(h2, h3) {
+  margin: 2rem auto;
+}
+h1:not(h1, h3),
+h2:not(h1, h3),
+h3:not(h1, h3) {
+  margin-block: 5rem 2rem;
+}
+h1:not(h1, h2),
+h2:not(h1, h2),
+h3:not(h1, h2) {
+  margin-block: 3rem 1rem;
+}
+
+form {
+  display: grid;
+  gap: 1rem;
+}
+form * {
+  outline: none;
+  border: none;
+  padding: 0.5rem;
+}
+form select {
+  max-height: 15vh;
+}
+form textarea {
+  resize: none;
+  height: 30vh;
+}
+form .date {
+  display: flex;
+  justify-content: space-between;
+}
+
+.buttons {
+  display: flex;
+  gap: 1rem;
+  justify-content: flex-end;
+}
+
+button {
+  cursor: pointer;
+  outline: none;
+  border: none;
+  padding: 0.5rem;
+}
+button:hover {
+  opacity: 0.7;
+}
+button.btn-success {
+  background-color: greenyellow;
+}
+button.btn-warning {
+  background-color: orange;
+}
+button.btn-danger {
+  background-color: red;
+}
+
+.modal {
+  z-index: 10;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  overflow-y: auto;
+  backdrop-filter: blur(5px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.modal > p {
+  cursor: pointer;
+  text-transform: uppercase;
+  text-decoration: underline;
+}
+.modal form > *:first-child {
+  margin-top: 5rem;
+}
+.modal form > *:last-child {
+  margin-bottom: 5rem;
+}
+
+.list input {
+  outline: none;
+  border: none;
+  color: white;
+  background: none;
+}
 
 /*# sourceMappingURL=style.css.map */
